完成日志收集系统

--- a/conf/my.conf
+++ b/conf/my.conf
@@ -1,10 +1,13 @@
 [LOG]
 
-LogPath=./conf/my.log
+LogPath=./logs/my.log
 LogLevel=Debug
 ChanSize=100
 
 [COLLECTLOG]
 
-LogPath=./conf/collect.log
-Topic=Default
+LogPath=./logs/collect.log
+Topic=test
+
+[KAFKA]
+ServerIp=127.0.0.1:9092
