--- a/conf/my.conf
+++ b/conf/my.conf
@@ -6,8 +6,11 @@ ChanSize=100
 
 [COLLECTLOG]
 
-LogPath=./logs/collect.log
-Topic=test
+CollectLogPath1=./logs/collect.log
+CollectLogTopic1=test
+
+CollectLogPath2=./logs/collect2.log
+CollectLogTopic2=collect2
 
 [KAFKA]
 ServerIp=127.0.0.1:9092
