--- a/conf/my.conf
+++ b/conf/my.conf
@@ -13,4 +13,8 @@ CollectLogPath2=./logs/collect2.log
 CollectLogTopic2=collect2
 
 [KAFKA]
-ServerIp=47.107.54.187:9092
+ServerIp=localhost:9092
+
+[ETCD]
+EtcdAddr1=localhost:2379
+EtcdKey=EtcdKey/
